--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
 	<div id="gameContainer">
-		<canvas id="unity-canvas" data-pixel-art="false"></canvas>
+		<canvas id="unity-canvas" data-pixel-art=""></canvas>
 		<script src="Build/FenrisVon.github.io.loader.js"></script>
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
@@ -57,7 +57,7 @@
 			};
 			var scaleToFit;
 			try {
-				scaleToFit = !!JSON.parse("true");
+				scaleToFit = !!JSON.parse("");
 			} catch (e) {
 				scaleToFit = true;
 			}
