--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/FenrisVon.github.io.data.gz",
-				frameworkUrl: "Build/FenrisVon.github.io.framework.js.gz",
-				codeUrl: "Build/FenrisVon.github.io.wasm.gz",
+				dataUrl: "Build/FenrisVon.github.io.data",
+				frameworkUrl: "Build/FenrisVon.github.io.framework.js",
+				codeUrl: "Build/FenrisVon.github.io.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "ProjectFenris",
