Fen 2.0 Updated (Correctly)

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/FenrisVon.Builds.loader.js"></script>
+		<script src="Build/FenrisVon.github.io.loader.js"></script>
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/FenrisVon.Builds.data",
-				frameworkUrl: "Build/FenrisVon.Builds.framework.js",
-				codeUrl: "Build/FenrisVon.Builds.wasm",
+				dataUrl: "Build/FenrisVon.github.io.data",
+				frameworkUrl: "Build/FenrisVon.github.io.framework.js",
+				codeUrl: "Build/FenrisVon.github.io.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "ProjectFenris",
