Fen 1.0 Possible Fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>ProjectFenris</title>
+	<title>ProjectFenrisV2</title>
 	<style>
 		html,
 		body {
@@ -52,8 +52,8 @@
 				codeUrl: "Build/FenrisVon.github.io.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
-				productName: "ProjectFenris",
-				productVersion: "1.0",
+				productName: "ProjectFenrisV2",
+				productVersion: "0.1",
 			};
 			var scaleToFit;
 			try {
