--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/FenrisVon.github.io.data",
+				dataUrl: "https://media.githubusercontent.com/media/FenrisVon/FenrisVon.github.io/main/Build/FenrisVon.github.io.data",
 				frameworkUrl: "Build/FenrisVon.github.io.framework.js",
 				codeUrl: "Build/FenrisVon.github.io.wasm",
 				streamingAssetsUrl: "StreamingAssets",
